# L0

./: .clang-format  CMakeLists.txt  README.md
docs/: pipeline-steps.drawio
examples/: faculty.l0  math.l0  read.l0  string.l0
examples/closures/: closures.l0
examples/control-flow/: control-flow.l0
examples/enums/: enums.l0
examples/faculty/: faculty.l0  print.l0  read.l0  string.l0
examples/functions/: functions.l0
examples/hello-world/: hello-world.l0
examples/namespaces/: namespaces.l0
examples/references/: references.l0
examples/structs/: structs.l0
examples/variables/: variables.l0
src/l0/: CMakeLists.txt
src/l0/ast/: CMakeLists.txt  ast_printer.cpp  ast_printer.h  expression.cpp  expression.h  identifier.cpp  identifier.h  indent.cpp  indent.h  module.h  scope.cpp  scope.h  statement.cpp  statement.h  type_annotation.cpp  type_annotation.h  type_expression.cpp  type_expression.h
src/l0/common/: CMakeLists.txt  constants.h
src/l0/generation/: CMakeLists.txt  generation.cpp  generation.h  generator.cpp  generator.h  generator_error.cpp  generator_error.h  type_converter.cpp  type_converter.h
src/l0/lexing/: CMakeLists.txt  lexer.cpp  lexer.h  token.cpp  token.h
src/l0/main/: CMakeLists.txt  compiler_driver.cpp  compiler_driver.h  main.cpp
src/l0/parsing/: CMakeLists.txt  parser.cpp  parser.h
src/l0/semantics/: CMakeLists.txt  README.md  binary_op_overload_resolver.cpp  binary_op_overload_resolver.h  conversion_checker.cpp  conversion_checker.h  declare_global_types.cpp  declare_global_types.h  declare_variables.cpp  declare_variables.h  fill_types.cpp  fill_types.h  global_scope_builder.cpp  global_scope_builder.h  global_symbol_pass.cpp  global_symbol_pass.h  module_validator.cpp  module_validator.h  operator_overload_resolver.cpp  operator_overload_resolver.h  reference_pass.cpp  reference_pass.h  resolver.cpp  resolver.h  return_statement_pass.cpp  return_statement_pass.h  semantic-checks.drawio  semantic_error.cpp  semantic_error.h  semantics.cpp  semantics.h  top_level_analyzer.cpp  top_level_analyzer.h  type_annotation_converter.cpp  type_annotation_converter.h  type_resolver.cpp  type_resolver.h  typechecker.cpp  typechecker.h
src/l0/types/: CMakeLists.txt  types.cpp  types.h
